Created cache decoder/definition, start iterating on skeleton npc